Assignment 1.01:
* Day 1 (2024-01-28)
    - Set up project
    - Wrote Makefile and CHANGELOG

* Day 2 (2024-01-29)
    - Completed basic version of coloring.c
    - Started working on output in main.c
    - Established project structure
    - Improved Makefile
    - Generated a flat map with borders and printed it to stdout
    - Can now play full image sequence
    - First successful voronoi noise
    - Improved bash command for playing full animation
    - Voronoi done, animation done; only road placement remains.

* Day 3 (2024-01-30)
    - Completed biome blending and noise improvements
    - Added type-specific rules for biome blending
    - Realised that this is just cellular automaton
    - Further improved type-specific rules for more natural terrain
    - Roads done